--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
-"dependencies": {
-  "next": "14.2.3",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
-  "chart.js": "^4.4.1",
-  "tailwindcss": "^3.4.0",
-  "postcss": "^8.4.23",
-  "autoprefixer": "^10.4.15"
+{
+  "name": "kids-app-final",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "14.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "chart.js": "^4.4.1",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.23",
+    "autoprefixer": "^10.4.15"
+  }
 }
