--- a/package.json
+++ b/package.json
@@ -1,12 +1,4 @@
 {
-  "name": "kids-app-final",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
     "next": "14.2.3",
     "react": "18.2.0",
@@ -14,6 +6,9 @@
     "chart.js": "^4.4.1",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.23",
-    "autoprefixer": "^10.4.15"
+    "autoprefixer": "^10.4.15",
+    "framer-motion": "^11.0.0"
   }
 }
+
+
