--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "type": "module",
+  "dependencies": {
+    ...
+  }
+}
+{
   "dependencies": {
     "next": "14.2.3",
     "react": "18.2.0",
@@ -10,5 +16,6 @@
     "framer-motion": "^11.0.0"
   }
 }
+
 
 
